package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

PID_FILE="/var/lib/rabbitmq/mnesia/rabbitmq"

genrule(
    name = "run_rabbitmq",
    srcs = [
        "run_rabbitmq.sh.tmpl"
    ],
    outs = [
        "run_rabbitmq.sh"
    ],
    cmd = ". $(location //build:bash) && envsubst '$${RABBITMQ_USER} $${RABBITMQ_PASSWORD}' < $< > $@",
    tools = [
        "//build:bash"
    ]
)

genrule(
    name = "rabbitmq",
    srcs = [
        "rabbitmq.conf.tmpl"
    ],
    outs = [
        "etc/rabbitmq/rabbitmq.conf"
    ],
    cmd = ". $(location //build:bash) && envsubst '$${RABBITMQ_PORT}' < $< > $@",
    tools = [
        "//build:bash"
    ]
)

container_image(
    name = "rabbitmq",
    base = "@rabbitmq//image",
    files = [
        ":run_rabbitmq",
        ":rabbitmq"
    ],
    data_path = ".",
    cmd = "./run_rabbitmq.sh",
    env = {
        "RABBITMQ_PID_FILE" : PID_FILE
    }
)
