package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

genrule(
    name = "config",
    srcs = select({
        "//:production": ["nginx.prod.conf"],
        "//conditions:default": ["nginx.dev.conf.tmpl"],
    }),
    outs = [
        "etc/nginx/nginx.conf"
    ],
    cmd = ". $(location //build:bash_env) && envsubst < $< > $@",
    tools = [
        "//build:bash_env"
    ]
)

container_image(
    name = "latest",
    base = "@nginx//image",
    files = [
        ":config",
    ],
    data_path = ".",
)
